# agriflow-hackathon

./: frontend_task.md  read.md
backend/: Procfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 046a6438fa2f_add_is_harvest_ready_to_farms.py  07a1c0cf6bb9_add_verified_at_to_harvest_reports.py  23bd9f34a180_add_admin_and_proof_fields_to_farm_and_.py  2825f509c783_add_harvest_and_payout_models.py  3282b84a0aaa_add_investments_table.py  5f2bd5081d2e_added_creation_of_farm_logic.py  6a8fde50b658_move_milestone_proofs_to_relational_.py  7072ef129e8e_refactor_finances_and_farm_location.py  7549a15ad515_rename_payment_evidence_public_id_to_.py  7827b5de088b_initial_kobo_schema.py  9f05b30dad35_changed_initial_farm_status_to_draft.py  a5bfd53f3659_add_missing_repayment_fields_and_fix_.py
backend/src/: __init__.py  config.py
backend/src/admin/: routes.py  schemas.py  seed_admin.py  services.py
backend/src/auth/: models.py  schemas.py  services.py
backend/src/bank/: routes.py
backend/src/crops/: models.py  schemas.py  seed_crops.py
backend/src/db/: main.py
backend/src/farmers/: schemas.py  services.py
backend/src/farms/: models.py  routes.py  schemas.py  services.py
backend/src/file_upload/: services.py
backend/src/harvest/: models.py  routes.py  schemas.py  services.py
backend/src/interswitch/: payment_status.py  services.py
backend/src/investments/: models.py  routes.py  schemas.py  services.py
backend/src/investors/: schemas.py  seed_investors.py  services.py
backend/src/milestones/: models.py  routes.py  (+2 more)
(+43 files in other folders)
